<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="405dp"
        android:layout_height="133dp"
        android:layout_gravity="center"
        android:baselineAligned="false"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="10dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/id_text"
                android:layout_width="172dp"
                android:layout_height="41dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="200dp"
                android:layout_marginBottom="8dp"
                android:textAppearance="?attr/textAppearanceListItem"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.0"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/content"
                android:layout_width="187dp"
                android:layout_height="41dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textAppearance="?attr/textAppearanceListItem"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.416"
                card_view:layout_constraintStart_toEndOf="@+id/id_text"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/tradeButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="172dp"
                android:layout_height="45dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:text="@string/trade"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.0"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/id_text"
                card_view:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/depositButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="189dp"
                android:layout_height="45dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:text="@string/deposit"
                android:visibility="visible"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="1.0"
                card_view:layout_constraintStart_toEndOf="@+id/tradeButton"
                card_view:layout_constraintTop_toBottomOf="@+id/id_text"
                card_view:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/spareChangeButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="357dp"
                android:layout_height="42dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/send_spare_change"
                android:visibility="invisible"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintVertical_bias="1.0" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>