<resources>
    <string name="myApp_name">Coinz</string>
    <string name="action_settings">Settings</string>
    <string name="access_token">pk.eyJ1IjoiZGltaXRyaS1wb2xsYXJkIiwiYSI6ImNqbjNleG5rNDAwdHgzcG9jeTh6Zng0bzkifQ.rU8jvg7GZfT3CdwL37djlA</string>
    <string name="email_address">email address</string>
    <string name="sign_in">sign in</string>
    <string name="create_account">create account</string>
    <string name="password">password</string>
    <string name="sign_out">Sign out</string>
    <string name="title_coin_list">Wallet</string>
    <string name="title_coin_detail">Coin Details</string>
    <string name="trade">Trade</string>
    <string name="deposit">Deposit</string>
    <string name="available_gold">Available Gold:</string>
    <string name="send_coin">Send Coin</string>
    <string name="recipient">Recipient :</string>
    <string name="title_item_list">Shop</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="buy">Buy</string>
    <string name="coin_to_gold_rate">Coin to Gold Rate:</string>
    <string name="send_spare_change">Send Spare Change</string>
    <string name="message">Message:</string>
    <string name="send_message">Send Message</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="username">Username</string>
    <string name="set_username">Set Username</string>
    <string name="enter_username">Enter Username:</string>
    <string name="tutorial1">WELCOME!  This is Coinz. The only way for the capitalist of tomorrow to spend today!Is this your first time playing? Or maybe you just needed a refresher? Then this tutorial will get you out collecting coinz in no time!</string>
    <string name="shil">SHIL</string>
...
